# node-stats

./: .gitignore  README.md  commands.json
backend-node/: package-lock.json  package.json  server.js
backend-rust/: Cargo.toml  Dockerfile  docker-build-and-push-image.sh
backend-rust/src/: main.rs
frontend-app/: Dockerfile  docker-build-and-push-image.sh  docker-run.sh  package-cutdown.json  package-lock.json  package.json  svelte.config.js
frontend-app/src/: app.html
frontend-app/src/lib/: NodeStats.svelte  env_config.ts
frontend-app/src/routes/: health.ts  index.svelte  statistics-test-data.json.ts  statistics.json.ts  stats.svelte
frontend-app/src/theme/: _smui-theme.scss  stats.scss
frontend-app/static/: smui-dark.css  smui.css
k8/: all.yaml  bad-all.yaml  cilium-network-policy.yaml
